* Change cruisecontrol.sh (main, binaryrelease, distcc) script to use more generic shebang (that also works on FreeBSD) (CC-789). Patch by Ivan "Rambius" Ivanov

build loop
======================

ClearCaseViewstrapper
---------------------
*  ClearCaseViewStrapper would cancel the build if the view was already mounted (CC-757).  Reported by Gerrit Brehmer. Patch by Glenn Opdycke-Hansen.

Git Source Control & Bootstrapper
----------------------
* Add git and gitbootstrapper to default-plugins.properties. Reported by Garret Pick.

Origo Publisher
----------------------
* Add Publisher for the Origo collaboration platform (CC-775). Patch by Patrick Ruckstuhl.


CruiseControl Release Notes - 2.7.2

general
======================
* use Util.doMkDirs() instead of File.mkdirs() to fix possible race condition when creating directories on WinXP, also Windows2000.
* Update bundled cc-config to version 1.7.2.
* Changed how CCDIR is calculated by cruisecontrol.sh in binary distribution to match the source distribution (CC-361)
* Changed connectfour config.xml in binary distribution to use filesystem intead of svn to avoid over loading SourceForge's svn server

contrib
======================

distributed
----------------------
* Added more robust Progress support for AntBuilder on BuildAgents.
* Remove extraneous synchronized flags.
* Add optional child element <remoteResult> to allow retrieval of additional build artifact directories.
* Change CCDist build to execute in the distributed/target directory (same as cc-main).
* Add mail.jar and activation.jar from main to paths for cases where SMTPAppender is used in log4j.properties.
* Add "java.verson" to the list of automatically defined agent entries, as the existing "java.vm.version" shows the hotspot vm version in 1.6.0_04+.

packager
----------------------
* Added SVN Bootstrapper to sample project
* Use the /var/spool/cruisecontrol/cc.pid file instead of fighting with /var/run