@@ -139,6 +139,7 @@ dashboard=net.sourceforge.cruisecontrol.config.DashboardConfigurationPlugin
 # manipulators
 gzip=net.sourceforge.cruisecontrol.logmanipulators.GZIPManipulator
 delete=net.sourceforge.cruisecontrol.logmanipulators.DeleteManipulator
+deleteartifacts=net.sourceforge.cruisecontrol.logmanipulators.DeleteArtifactsManipulator
 
 # other
 merge=net.sourceforge.cruisecontrol.buildloggers.MergeLogger
